--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,1 +1,18 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="css/styles.css">
+        <title>Assignment Solution for Module 2</title>
+    </head>
 
+    <body>
+        <header>Our Menu</header>
+        <div class="row">
+            
+            <section class="col-lg-4 col-md-6 col-sm-12"><section id="sec1"><section id="title1">Chicken</section><p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis eos inventore recusandae iste itaque numquam facilis, tenetur. Doloribus officiis quae facilis, nisi, ex similique. Animi, perferendis.</p></section></section>
+            <section class="col-lg-4 col-md-6 col-sm-12"><section id="sec2"><section id="title2">Beef</section><p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis eos inventore recusandae iste itaque numquam facilis, tenetur. Doloribus officiis quae facilis, nisi, ex similique. Animi, perferendis.</p></section></section>
+            <section class="col-lg-4 col-md-12 col-sm-12"><section id="sec3"><section id="title3">Sushi</section><p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis eos inventore recusandae iste itaque numquam facilis, tenetur. Doloribus officiis quae facilis, nisi, ex similique. Animi, perferendis.</p></section></section>
+        </div>
+    </body>
